# LLMOnADiet

./: .gitignore  README.md  pyproject.toml
.cecl/: graph.json
.claude/: settings.local.json
benchmark/: results.md  run_benchmark.py
context_engine/: __init__.py  apply.py  cli.py  compressor.py  graph_builder.py  installer.py  intent.py  js_parser.py  mcp_server.py  parser.py  pruner.py  ranker.py  retrieval.py  shadow_server.py
context_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
context_engine/hooks/: user_prompt_submit.py
demo/: README_demo.md  record_demo.sh
hooks/: pre_tool_use.py
llm_diet/: diet_run.py  mcp_server.py
