[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "context-engine"
version = "0.1.0"
description = "Codebase ingestion and call-graph builder."
requires-python = ">=3.11"
dependencies = ["typer>=0.12"]

[project.scripts]
context-engine = "context_engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_engine*"]
