[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-engine"
version = "0.1.0"
description = "Codebase ingestion and call-graph builder."
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "anthropic>=0.40", "mcp>=1.0"]

[project.scripts]
context-engine = "context_engine.cli:main"
context-engine-mcp = "context_engine.mcp_server:mcp.run"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_engine*"]
